# flux

./: .CLAUDE.md  .gitignore  CLAUDE.md  DEVELOPMENT.md  FIXES.md  README.md  REVIEW_NOTES.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
configs/: qwen3-72b-64gpu.yaml  qwen3-8b-8gpu.yaml
docs/: ARCHITECTURE_PLAN.md  DEVELOPMENT_NOTES.md  NEXT_STEPS.md  README.md  algorithms.md  api.md  changelog.md  configuration.md  flux-design-spec.md  flux-project-structure.md  flux_core.py  getting-started.md  index.md  requirements.txt  tags.md
docs/algorithms/: custom.md  dapo.md  dpo.md  grpo.md  index.md  ppo.md  reinforce.md  rloo.md
docs/api/: algorithms.md  config.md  coordinator.md  index.md  rewards.md  trainer.md  trajectory.md  utilities.md
docs/assets/: .gitkeep  flux_architecture.drawio
docs/concepts/: adaptive-async.md  april.md  architecture.md  batch-composition.md  index.md  staleness.md  weight-sync.md
docs/configuration/: adaptive-async.md  algorithm.md  examples.md  index.md  reference.md  rollout.md  training.md
docs/contributing/: code-style.md  documentation.md  index.md  setup.md  testing.md
docs/design/: comparison.md  index.md  philosophy.md  roadmap.md
docs/getting-started/: configuration.md  first-training.md  index.md  installation.md  quickstart.md
docs/hooks/: api_docs.py
docs/how-to/: checkpoints.md  custom-algorithm.md  custom-rewards.md  debugging.md  index.md  monitoring.md  multi-node.md  performance.md
docs/includes/: abbreviations.md
docs/javascripts/: katex.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/tutorials/: adaptive-async.md  basic-rlhf.md  custom-rewards.md  dpo-training.md  index.md  multi-gpu.md  production.md
examples/: basic_training.py  custom_algorithm.py  custom_reward.py
flux/: __init__.py  cli.py  trainer.py  version.py
flux/controller/: __init__.py  adaptive_async.py  importance.py  mode_gate.py  staleness.py
flux/coordinator/: __init__.py  async_runner.py  communication.py  coordinator.py
flux/core/: __init__.py  config.py  metrics.py  trajectory.py  types.py
flux/rewards/: __init__.py  base.py  model_based.py  rule_based.py
flux/rollout/: __init__.py  length_predictor.py  manager.py  partial_buffer.py  sglang_client.py
flux/sync/: __init__.py  cuda_ipc.py  delta_compression.py  weight_sync.py
flux/training/: __init__.py  base.py  batch_composer.py  megatron_engine.py
flux/training/algorithms/: __init__.py  base.py  dapo.py  dpo.py  grpo.py  gspo.py  ppo.py  reinforce.py  rloo.py
flux/training/backends/: __init__.py  transformers.py
flux/utils/: __init__.py  checkpoint.py  fault_tolerance.py  monitoring.py
flux_rlhf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: docs-build.sh  docs-serve.sh
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_coordinator.py  test_training_loop.py
tests/unit/: __init__.py  test_adaptive_async.py  test_algorithms.py  test_async_runner.py  test_batch_composer.py  test_config.py  test_importance.py  test_metrics.py  test_mode_gate.py  test_rewards.py  test_rollout.py  test_rollout_manager.py  test_sglang_client.py  test_staleness.py  test_training_backend.py  test_trajectory.py  test_transformers_backend.py  test_types.py  test_utils.py  test_weight_sync.py
